raffia/tests/error/scss/qualified-rule/missing-block.snap
---
source: raffia/tests/error.rs
---
error: expect token `{`, but found `<eof>`
  ┌─ missing-block.scss:2:1
  │
2 │ 
  │ ^


